pfreerdp: update code

--- a/client/Packet/cli/CMakeLists.txt
+++ b/client/Packet/cli/CMakeLists.txt
@@ -13,6 +13,8 @@ set(${MODULE_PREFIX}_LIBS ${${MODULE_PREFIX}_LIBS} pfreerdp-client)
 
 target_link_libraries(${MODULE_NAME} ${${MODULE_PREFIX}_LIBS})
 
+set_target_properties(${MODULE_NAME} PROPERTIES OUTPUT_NAME "pfreerdp" RUNTIME_OUTPUT_DIRECTORY "..")
+
 install(TARGETS ${MODULE_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT client)
 
 if(WITH_DEBUG_SYMBOLS AND MSVC)
@@ -20,3 +22,4 @@ if(WITH_DEBUG_SYMBOLS AND MSVC)
 endif()
 
 set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "Client/Packet")
+
