--- a/client/Packet/CMakeLists.txt
+++ b/client/Packet/CMakeLists.txt
@@ -6,7 +6,7 @@ set(${MODULE_PREFIX}_SRCS
 	packet.c
 	packet.h)
 
-add_library(${MODULE_NAME} SHARED ${${MODULE_PREFIX}_SRCS})
+add_library(${MODULE_NAME} ${${MODULE_PREFIX}_SRCS})
 
 if(WITH_LIBRARY_VERSIONING)
 	set_target_properties(${MODULE_NAME} PROPERTIES VERSION ${FREERDP_VERSION} SOVERSION ${FREERDP_API_VERSION})
